Added search bar and buttons to header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <header>
     <div>
       <div>
-        <img class="blackHeart" src="images\black-heart.png" alt="black heart" />
+        <img class="blackHeart" src="images\black-heart.png" alt="black heart iamge goes here" />
         <span> Nifty Penguin Magic </span>
       </div>
       <nav>
@@ -17,7 +17,10 @@
     </div>
   
     <div>
-     <img src="" alt="images\npm-logo.png"> <!-- add logo, search bar and buttons (or links and style them as buttons later) -->
+     <img src="images\npm-logo.png" alt="Logo image goes here" />
+     <form action=""></form>
+     <a href="#">Join </a>
+     <a href="#">Log In</a> <!-- add logo, search bar and buttons (or links and style them as buttons later) -->
     </div>
   </header>
 NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
