Added classes for CSS styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <header>
     <div>
       <div>
-        <img class="blackHeart" src="images\black-heart.png" alt="black heart iamge goes here" /> <span> Nifty Penguin Magic </span>
+        <img class="blackHeart" src="images\black-heart.png" alt="black heart" /> <span> Nifty Penguin Magic </span>
        
       </div>
       <nav>
@@ -18,12 +18,12 @@
       </nav>
     </div>
   
-    <div id="Search">
+    <div class="search">
      <img src="images\npm-logo.png" alt="NPM Logo" />
      
      <form action="/some URL" method="get">
-      <img src="images\magnifying-glass.png" alt="magnifying glass">
-      <label class="Search" for="Search">Search Packages:</label>
+      <img class="searchImg" src="images\magnifying-glass.png" alt="magnifying glass">
+      <label class="searchLabel" for="Search">Search Packages:</label>
       <input type="text" name="Search" id="Search">
       <button type="submit">Search</button>
      </form>
