Eliminated tags for form

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
      <img src="images\npm-logo.png" alt="NPM Logo" />
      
      <form action="/some URL" method="get">
-      <img class="searchImg" src="images\magnifying-glass.png" alt="magnifying glass">
-      <label class="searchLabel" for="Search">Search Packages:</label>
+      <img src="images\magnifying-glass.png" alt="magnifying glass">
+      <label for="Search">Search Packages:</label>
       <input type="text" name="Search" id="Search">
       <button type="submit">Search</button>
      </form>
